--- a/index.html
+++ b/index.html
@@ -48,19 +48,131 @@
     <div class="contenedor">
         <section class="hero">
             <div class="contenido-hero">
-                <h2 class="titulo">Hello World! I'am Laura</h2>
+                <h1 class="titulo">Hello World! <span>I'am Laura</span></h1>
 
-                <div>
+                <div class="content-wrapper">
                     <p>
-                        Soy Desarrollador Web Full Stack. Soy autodidacta de corazón, aunque he participado de distintos
-                        Bootcamps para adentrarme en los conocimiento que he ido necesitando para los trabajos que he
-                        enfrentado. Mis próximos pasos: Buscar el arte en la programación. Busco identificarme con la
-                        profesión que vivo.
-                        Busco conectar con empresas que usen WordPress y me permitan ejercer de forma parcial en mi área
-                        favorita: El desarrollo Web.
+                        Soy Desarrollador Web Full Stack, y mi pasión por la tecnología me ha llevado a ser autodidacta
+                        por naturaleza. A lo largo de mi carrera, he participado en diversos bootcamps que me han
+                        brindado los conocimientos necesarios para enfrentar los desafíos profesionales.
+
+                        Mi próximo objetivo es encontrar la creatividad en la programación y profundizar en mi conexión
+                        con esta apasionante profesión. Estoy en busca de oportunidades para colaborar con empresas que
+                        utilicen WordPress, permitiéndome así desarrollar proyectos en mi área favorita: el desarrollo
+                        web.
                     </p>
+                    <img src="img/perfil-web.gif" alt="imagen perfil">
                 </div>
+                <a class="boton" href="#">Contactar</a>
             </div> <!--.contenodor-hero-->
+        </section>
+
+        <section class="sobre-mi">
+            <h2>Sobre mí</h2>
+
+            <h3>Soy Laura, <span>Desarrollador Web Full Stack</span></h3>
+            <p>He recorrido un camino diverso y enriquecedor en el mundo del diseño y la tecnología. Mi viaje
+                profesional comenzó con estudios en Diseño Gráfico y Fotografía, áreas que siempre han capturado mi
+                interés y creatividad. Sin embargo, la vida me llevó por caminos inesperados, y como madre soltera,
+                decidí dar un giro a mi carrera para emprender mi propio negocio.</p>
+            <p>Durante años, mi emprendimiento personal tuvo un éxito significativo, permitiéndome desarrollar
+                habilidades empresariales y una profunda comprensión del mercado. Sin embargo, el deseo de retomar mi
+                pasión por el diseño me impulsó a reincorporarme al campo profesional, enfocándome en Diseño UX/UI y
+                desarrollo web con Wordpress.</p>
+            <p>Con la intención de expandir mis conocimientos y habilidades, participé en varios bootcamps, donde
+                profundicé en tecnologías clave como HTML, CSS, JavaScript, React y .NET. Estas experiencias me han
+                permitido combinar la creatividad con la funcionalidad, creando soluciones de diseño que no solo
+                capturan la esencia estética sino que también mejoran la experiencia del usuario.</p>
+            <p>Actualmente, he decidido regresar a Wordpress y me encuentro estudiando Programación Creativa, una
+                disciplina que me permite explorar la intersección entre arte y tecnología de una manera innovadora. Mi
+                objetivo es seguir desarrollando proyectos que desafíen los límites del diseño y la programación,
+                mientras continúo creciendo como profesional y madre.</p>
+        </section>
+
+        <section class="fichas">
+            <div class="primera-seccion">
+                <div>
+                    <h6>Cumpleaños:</h6>
+                    <p>4/12/1987</p>
+                    <hr>
+                </div>
+                <div>
+                    <h6>LinkedIn:</h6>
+                    <p>marellanorero</p>
+                    <hr>
+                </div>
+                <div>
+                    <h6>Email:</h6>
+                    <p>marellanonorero@gmail.com</p>
+                    <hr>
+                </div>
+                <div>
+                    <h6>País/Ciudad:</h6>
+                    <p>Santiago, Chile</p>
+                    <hr>
+                </div>
+                <div>
+                    <h6>Edad:</h6>
+                    <p>36</p>
+                    <hr>
+                </div>
+                <div>
+                    <h6>GitHub:</h6>
+                    <p>marellanonorero</p>
+                    <hr>
+                </div>
+                <div>
+                    <h6>Número:</h6>
+                    <p>(+56) 9 4 4612393</p>
+                    <hr>
+                </div>
+                <div>
+                    <h6>Disponible:</h6>
+                    <p>Posiciones de Medio Tiempo</p>
+                    <hr>
+                </div>
+            </div>
+            <div class="segunda-seccion">
+                <div>
+                    <h6>Edad:</h6>
+                    <p>36</p>
+                    <hr>
+                </div>
+                <div>
+                    <h6>GitHub:</h6>
+                    <p>marellanonorero</p>
+                    <hr>
+                </div>
+                <div>
+                    <h6>Número:</h6>
+                    <p>(+56) 9 4 4612393</p>
+                    <hr>
+                </div>
+                <div>
+                    <h6>Disponible:</h6>
+                    <p>Posiciones de Medio Tiempo</p>
+                    <hr>
+                </div>
+            </div>
+            <div class="Tercera-seccion">
+                <div>
+                    <h6>Tecnologías:</h6>
+                </div>
+                <div>
+                    <p>HTML, CSS, JS, C#</p>
+                    <hr>
+                </div>
+                <div>
+               
+                    <p>(+56) 9 4 4612393</p>
+                    <hr>
+                </div>
+                <div>
+               
+                    <p>Posiciones de Medio Tiempo</p>
+                    <hr>
+                </div>
+            </div>
         </section>
     </div>
 </body>
