--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
         </div>
 
         <div class="menu">
-            <div class="enlace">
+            <a class="enlace" href="#Home">
                 <i class='bx bx-home-heart'></i>
                 <span>Home</span>
-            </div>
-            <div class="enlace">
+            </a>
+            <a class="enlace" href="#sobre-mi">
                 <i class='bx bxs-user'></i>
                 <span>About</span>
-            </div>
-            <div class="enlace">
+            </a>
+            <a class="enlace" href="#portfolio">
                 <i class='bx bxs-shopping-bags'></i>
                 <span>Portfolio</span>
-            </div>
-            <div class="enlace">
+            </a>
+            <a class="enlace" href="#contacto">
                 <i class='bx bxs-contact'></i>
                 <span>Contact</span>
-            </div>
+            </a>
         </div>
 
     </header>
-    <div class="contenedor">
-        <section class="hero">
+    <div  class="contenedor">
+        <section id="Home" class="hero">
             <div class="contenido-hero">
                 <h1 class="titulo">Hello World! <span>I'am Laura</span></h1>
 
@@ -63,117 +63,142 @@
                     </p>
                     <img src="img/perfil-web.gif" alt="imagen perfil">
                 </div>
-                <a class="boton" href="#">Contactar</a>
+                <a class="boton" href="#contacto">Contactar</a>
             </div> <!--.contenodor-hero-->
         </section>
 
-        <section class="sobre-mi">
-            <h2>Sobre mí</h2>
+        <section class="sobre-mi" id="sobre-mi">
+            <div class="sobre-mi__titulos">
+                <h2>Sobre mí</h2>
 
-            <h3>Soy Laura, <span>Desarrollador Web Full Stack</span></h3>
-            <p>He recorrido un camino diverso y enriquecedor en el mundo del diseño y la tecnología. Mi viaje
-                profesional comenzó con estudios en Diseño Gráfico y Fotografía, áreas que siempre han capturado mi
-                interés y creatividad. Sin embargo, la vida me llevó por caminos inesperados, y como madre soltera,
-                decidí dar un giro a mi carrera para emprender mi propio negocio.</p>
-            <p>Durante años, mi emprendimiento personal tuvo un éxito significativo, permitiéndome desarrollar
-                habilidades empresariales y una profunda comprensión del mercado. Sin embargo, el deseo de retomar mi
-                pasión por el diseño me impulsó a reincorporarme al campo profesional, enfocándome en Diseño UX/UI y
-                desarrollo web con Wordpress.</p>
-            <p>Con la intención de expandir mis conocimientos y habilidades, participé en varios bootcamps, donde
-                profundicé en tecnologías clave como HTML, CSS, JavaScript, React y .NET. Estas experiencias me han
-                permitido combinar la creatividad con la funcionalidad, creando soluciones de diseño que no solo
-                capturan la esencia estética sino que también mejoran la experiencia del usuario.</p>
-            <p>Actualmente, he decidido regresar a Wordpress y me encuentro estudiando Programación Creativa, una
-                disciplina que me permite explorar la intersección entre arte y tecnología de una manera innovadora. Mi
-                objetivo es seguir desarrollando proyectos que desafíen los límites del diseño y la programación,
-                mientras continúo creciendo como profesional y madre.</p>
+                <h3>Soy Laura, <span>Desarrollador Web Full Stack</span></h3>
+            </div>
+            <div class="sobre-mi__parrafo">
+                <p>He recorrido un camino diverso y enriquecedor en el mundo del diseño y la tecnología. Mi viaje
+                    profesional comenzó con estudios en Diseño Gráfico y Fotografía, áreas que siempre han capturado mi
+                    interés y creatividad. Sin embargo, la vida me llevó por caminos inesperados, y como madre soltera,
+                    decidí dar un giro a mi carrera para emprender mi propio negocio.</p>
+                <p>Durante años, mi emprendimiento personal tuvo un éxito significativo, permitiéndome desarrollar
+                    habilidades empresariales y una profunda comprensión del mercado. Sin embargo, el deseo de retomar
+                    mi
+                    pasión por el diseño me impulsó a reincorporarme al campo profesional, enfocándome en Diseño UX/UI y
+                    desarrollo web con Wordpress.</p>
+                <p>Con la intención de expandir mis conocimientos y habilidades, participé en varios bootcamps, donde
+                    profundicé en tecnologías clave como HTML, CSS, JavaScript, React y .NET. Estas experiencias me han
+                    permitido combinar la creatividad con la funcionalidad, creando soluciones de diseño que no solo
+                    capturan la esencia estética sino que también mejoran la experiencia del usuario.</p>
+                <p>Actualmente, he decidido regresar a Wordpress y me encuentro estudiando Programación Creativa, una
+                    disciplina que me permite explorar la intersección entre arte y tecnología de una manera innovadora.
+                    Mi
+                    objetivo es seguir desarrollando proyectos que desafíen los límites del diseño y la programación,
+                    mientras continúo creciendo como profesional y madre.</p>
+            </div>
         </section>
 
         <section class="fichas">
             <div class="primera-seccion">
-                <div>
-                    <h6>Cumpleaños:</h6>
-                    <p>4/12/1987</p>
-                    <hr>
+                <div class="fichas__contenedor">
+                    <h4 class="fichas__clave">Cumpleaños:</h4>
+                    <p class="fichas__parrafo">4/12/1987</p>
                 </div>
-                <div>
-                    <h6>LinkedIn:</h6>
-                    <p>marellanorero</p>
-                    <hr>
+                <hr>
+                <div class="fichas__contenedor">
+                    <h4 class="fichas__clave">LinkedIn:</h4>
+                    <p class="fichas__parrafo">marellanorero</p>
                 </div>
-                <div>
-                    <h6>Email:</h6>
-                    <p>marellanonorero@gmail.com</p>
-                    <hr>
+                <hr>
+                <div class="fichas__contenedor">
+                    <h4 class="fichas__clave">Email:</h4>
+                    <p class="fichas__parrafo">marellanonorero@gmail.com</p>
                 </div>
-                <div>
-                    <h6>País/Ciudad:</h6>
-                    <p>Santiago, Chile</p>
-                    <hr>
+                <hr>
+                <div class="fichas__contenedor">
+                    <h4 class="fichas__clave">País/Ciudad:</h4>
+                    <p class="fichas__parrafo">Santiago, Chile</p>
                 </div>
-                <div>
-                    <h6>Edad:</h6>
-                    <p>36</p>
-                    <hr>
-                </div>
-                <div>
-                    <h6>GitHub:</h6>
-                    <p>marellanonorero</p>
-                    <hr>
-                </div>
-                <div>
-                    <h6>Número:</h6>
-                    <p>(+56) 9 4 4612393</p>
-                    <hr>
-                </div>
-                <div>
-                    <h6>Disponible:</h6>
-                    <p>Posiciones de Medio Tiempo</p>
-                    <hr>
-                </div>
+
             </div>
             <div class="segunda-seccion">
-                <div>
-                    <h6>Edad:</h6>
-                    <p>36</p>
-                    <hr>
+                <div class="fichas__contenedor">
+                    <h4 class="fichas__clave">Edad:</h4>
+                    <p class="fichas__parrafo">36</p>
                 </div>
-                <div>
-                    <h6>GitHub:</h6>
-                    <p>marellanonorero</p>
-                    <hr>
+                <hr>
+                <div class="fichas__contenedor">
+                    <h4 class="fichas__clave">GitHub:</h6>
+                        <p class="fichas__parrafo">marellanonorero</p>
                 </div>
-                <div>
-                    <h6>Número:</h6>
-                    <p>(+56) 9 4 4612393</p>
-                    <hr>
+                <hr>
+                <div class="fichas__contenedor">
+                    <h4 class="fichas__clave">Número:</h4>
+                    <p class="fichas__parrafo">(+56) 9 4 4612393</p>
                 </div>
-                <div>
-                    <h6>Disponible:</h6>
-                    <p>Posiciones de Medio Tiempo</p>
-                    <hr>
+                <hr>
+                <div class="fichas__contenedor">
+                    <h4 class="fichas__clave">Disponible:</h4>
+                    <p class="fichas__parrafo">Posiciones de Medio Tiempo</p>
                 </div>
+
             </div>
-            <div class="Tercera-seccion">
+            <div class="tercera-seccion">
                 <div>
-                    <h6>Tecnologías:</h6>
+                    <h4>Tecnologías:</h4>
                 </div>
                 <div>
-                    <p>HTML, CSS, JS, C#</p>
-                    <hr>
+                    <p>HTML, CSS, JS, C#, PHP</p>
                 </div>
+                <hr>
                 <div>
-               
-                    <p>(+56) 9 4 4612393</p>
-                    <hr>
+                    <p>WordPress y nociones de SEO</p>
                 </div>
+                <hr>
                 <div>
-               
-                    <p>Posiciones de Medio Tiempo</p>
-                    <hr>
+                    <p>ReactJS, .NET, SQL, Azure Cloud</p>
+                </div>
+
+            </div>
+        </section>
+        <section class="botones">
+            <a class="boton" href="documento/CV - Laura Arellano.pdf" download="CV-Laura Arellano">Descargar CV</a>
+            <a class="boton" href="#contacto">Contactar</a>
+        </section>
+        <section class="portfolio" id="portfolio">
+            <h2>Portfolio</h2>
+        </section>
+        <section id="contacto">
+            <h2>Contacto</h2>
+            <h3 class="contacto__pregunta">¿Tienes alguna pregunta?</h3>
+            <div class="contacto">
+                <div class="contacto__telegram">
+                    <span class="contacto__icono">
+                        <i class='bx bxl-telegram'></i>
+                    </span>
+                    <p>marellanorero</p>
+                </div>
+                <div class="contacto__email">
+                    <span class="contacto__icono">
+                        <i class='bx bxs-envelope'></i>
+                    </span>
+                    <p>marellanorero@gmail.com</p>
+                </div>
+                <div class="contacto__github">
+                    <span class="contacto__icono">
+                        <i class='bx bxl-github'></i>
+                    </span>
+                    <p>github.com/marellanorero</p>
+                </div>
+                <div class="contacto__linkedin">
+                    <span class="contacto__icono">
+                        <i class='bx bxl-linkedin-square'></i>
+                    </span>
+                    <p>linkedin.com/in/marellanorero/</p>
                 </div>
             </div>
         </section>
+
+        <footer class="footer">
+            <p>Todos los derechos reservados. Laura Arellano</p>
+        </footer>
     </div>
 </body>
 
