--- a/index.html
+++ b/index.html
@@ -45,25 +45,31 @@
         </div>
 
     </header>
-    <div  class="contenedor">
+    <div class="contenedor">
         <section id="Home" class="hero">
             <div class="contenido-hero">
                 <h1 class="titulo">Hello World! <span>I'am Laura</span></h1>
 
                 <div class="content-wrapper">
-                    <p>
-                        Soy Desarrollador Web Full Stack, y mi pasión por la tecnología me ha llevado a ser autodidacta
-                        por naturaleza. A lo largo de mi carrera, he participado en diversos bootcamps que me han
-                        brindado los conocimientos necesarios para enfrentar los desafíos profesionales.
+                    <div class="izquierda">
+                        <p>
+                            Soy Desarrollador Web Full Stack, y mi pasión por la tecnología me ha llevado a ser
+                            autodidacta
+                            por naturaleza. A lo largo de mi carrera, he participado en diversos bootcamps que me han
+                            brindado los conocimientos necesarios para enfrentar los desafíos profesionales.
 
-                        Mi próximo objetivo es encontrar la creatividad en la programación y profundizar en mi conexión
-                        con esta apasionante profesión. Estoy en busca de oportunidades para colaborar con empresas que
-                        utilicen WordPress, permitiéndome así desarrollar proyectos en mi área favorita: el desarrollo
-                        web.
-                    </p>
+                            Mi próximo objetivo es encontrar la creatividad en la programación y profundizar en mi
+                            conexión
+                            con esta apasionante profesión. Estoy en busca de oportunidades para colaborar con empresas
+                            que
+                            utilicen WordPress, permitiéndome así desarrollar proyectos en mi área favorita: el
+                            desarrollo
+                            web.
+                        </p>
+                        <a class="boton" href="#contacto">Contactar</a>
+                    </div>
                     <img src="img/perfil-web.gif" alt="imagen perfil">
                 </div>
-                <a class="boton" href="#contacto">Contactar</a>
             </div> <!--.contenodor-hero-->
         </section>
 
@@ -116,9 +122,7 @@
                     <h4 class="fichas__clave">País/Ciudad:</h4>
                     <p class="fichas__parrafo">Santiago, Chile</p>
                 </div>
-
-            </div>
-            <div class="segunda-seccion">
+                <hr>
                 <div class="fichas__contenedor">
                     <h4 class="fichas__clave">Edad:</h4>
                     <p class="fichas__parrafo">36</p>
@@ -140,7 +144,7 @@
                 </div>
 
             </div>
-            <div class="tercera-seccion">
+            <div class="segunda-seccion">
                 <div>
                     <h4>Tecnologías:</h4>
                 </div>
