se agregaron los proyectos en video

--- a/index.html
+++ b/index.html
@@ -168,6 +168,24 @@
         </section>
         <section class="portfolio" id="portfolio">
             <h2>Portfolio</h2>
+            <p>Para ver los videos abre cada proyecto en un nueva ventana, podrás ver un panorama más amplio del trabajo.</p>
+            <div class="wordpress"> <!--Transversal-->
+                <video src="videos/Raca Ventura.mp4" type="video/mp4"></video>
+                <video src="videos/Landing Page.mp4" type="video/mp4"></video>
+                <video src="videos/ICV.mp4" type="video/mp4"></video>
+                <video src="videos/Dulce Kreacion.mp4" type="video/mp4"></video>
+                <video src="videos/decofertas.mp4" type="video/mp4"></video>
+                <video src="videos/Cognitive English.mp4" type="video/mp4"></video>
+            </div>
+            <div class="react-bootstrap"><!--3-->
+
+            </div>
+            <div class="c-net"> <!--2-->
+
+            </div>
+            <div class="javascript-php"> <!--1-->
+
+            </div>
         </section>
         <section id="contacto">
             <h2>Contacto</h2>
