--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
             <h2>Portfolio</h2>
             <p>Para ver los videos abre cada proyecto en un nueva ventana, podrás ver un panorama más amplio del trabajo.</p>
             <div class="wordpress"> <!--Transversal-->
-                <video src="videos/Raca Ventura.mp4" type="video/mp4"></video>
-                <video src="videos/Landing Page.mp4" type="video/mp4"></video>
-                <video src="videos/ICV.mp4" type="video/mp4"></video>
-                <video src="videos/Dulce Kreacion.mp4" type="video/mp4"></video>
+                <video src="videos/raca-ventura.mp4" type="video/mp4"></video>
+                <video src="videos/landing-page.mp4" type="video/mp4"></video>
+                <video src="videos/icv.mp4" type="video/mp4"></video>
+                <video src="videos/dulce-kreacion.mp4" type="video/mp4"></video>
                 <video src="videos/decofertas.mp4" type="video/mp4"></video>
-                <video src="videos/Cognitive English.mp4" type="video/mp4"></video>
+                <video src="videos/cognitive-english.mp4" type="video/mp4"></video>
             </div>
             <div class="react-bootstrap"><!--3-->
 
