--- a/index.html
+++ b/index.html
@@ -168,14 +168,32 @@
         </section>
         <section class="portfolio" id="portfolio">
             <h2>Portfolio</h2>
-            <p>Para ver los videos abre cada proyecto en un nueva ventana, podrás ver un panorama más amplio del trabajo.</p>
+            
             <div class="wordpress"> <!--Transversal-->
-                <video src="videos/raca-ventura.mp4" type="video/mp4"></video>
-                <video src="videos/landing-page.mp4" type="video/mp4"></video>
-                <video src="videos/icv.mp4" type="video/mp4"></video>
-                <video src="videos/dulce-kreacion.mp4" type="video/mp4"></video>
-                <video src="videos/decofertas.mp4" type="video/mp4"></video>
-                <video src="videos/cognitive-english.mp4" type="video/mp4"></video>
+                <video controls>
+                    <source src="videos/raca-ventura.mp4" type="video/mp4">
+                    <source src="videos/raca-ventura.webm" type="video/webm">
+                </video>
+                <video controls>
+                    <source src="videos/landing-page.mp4" type="video/mp4">
+                    <source src="videos/landing-page.webm" type="video/webm">
+                </video>
+                <video controls>
+                    <source src="videos/icv.mp4" type="video/mp4">
+                    <source src="videos/icv.webm" type="video/webm">
+                </video>
+                <video controls>
+                    <source src="videos/dulce-kreacion.mp4" type="video/mp4">
+                    <source src="videos/dulce-kreacion.webm" type="video/webm">
+                </video>
+                <video controls>
+                    <source src="videos/decofertas.mp4" type="video/mp4">
+                    <source src="videos/decofertas.webm" type="video/webm">
+                </video>
+                <video controls>
+                    <source src="videos/cognitive-english.mp4" type="video/mp4">
+                    <source src="videos/cognitive-english.webm" type="video/webm">
+                </video>
             </div>
             <div class="react-bootstrap"><!--3-->
 
