tras la perdida de los videos los volví a subir pero desde youtube

--- a/index.html
+++ b/index.html
@@ -170,30 +170,12 @@
             <h2>Portfolio</h2>
             
             <div class="wordpress"> <!--Transversal-->
-                <video controls>
-                    <source src="videos/raca-ventura.mp4" type="video/mp4">
-                    <source src="videos/raca-ventura.webm" type="video/webm">
-                </video>
-                <video controls>
-                    <source src="videos/landing-page.mp4" type="video/mp4">
-                    <source src="videos/landing-page.webm" type="video/webm">
-                </video>
-                <video controls>
-                    <source src="videos/icv.mp4" type="video/mp4">
-                    <source src="videos/icv.webm" type="video/webm">
-                </video>
-                <video controls>
-                    <source src="videos/dulce-kreacion.mp4" type="video/mp4">
-                    <source src="videos/dulce-kreacion.webm" type="video/webm">
-                </video>
-                <video controls>
-                    <source src="videos/decofertas.mp4" type="video/mp4">
-                    <source src="videos/decofertas.webm" type="video/webm">
-                </video>
-                <video controls>
-                    <source src="videos/cognitive-english.mp4" type="video/mp4">
-                    <source src="videos/cognitive-english.webm" type="video/webm">
-                </video>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/W9xMwnzHzKw?si=aZbXqlTVqk8A8eck" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/FJn6WEirV3U?si=kHq5QyJyok04pPEF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/oAfJ_WKdwok?si=bK58Ogmexf-fpat-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/t0EIoCnY0q0?si=GCYK8OmNPd11oCyD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/cNmpMNXigrk?si=Phvc6KgJ2VTrP1x8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/i8hQGboJrE8?si=y1RtidSjMteXYfqF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="react-bootstrap"><!--3-->
 
