--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
     <link rel="preload" href="styles/normalize.css" as="style">
     <link rel="stylesheet" href="styles/normalize.css">
 
+    <link rel="preload"
+        href="https://fonts.googleapis.com/css2?family=Clicker+Script&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans:wght@400;700&display=swap"
+        crossorigin="crossorigin" as="font">
     <link
-    rel="preload"
-    href="https://fonts.googleapis.com/css2?family=Clicker+Script&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans:wght@400;700&display=swap"
-    crossorigin="crossorigin"
-    as="font"
-    >
-    <link
-    href="https://fonts.googleapis.com/css2?family=Clicker+Script&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans:wght@400;700&display=swap"
-    rel="stylesheet">
+        href="https://fonts.googleapis.com/css2?family=Clicker+Script&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans:wght@400;700&display=swap"
+        rel="stylesheet">
 
     <link rel="preload" href="styles/styles.css" as="style">
     <link rel="stylesheet" href="styles/styles.css">
@@ -184,14 +181,67 @@
         </section>
         <section class="portfolio" id="portfolio">
             <h2>Portfolio</h2>
-            
             <div class="wordpress"> <!--Transversal-->
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/W9xMwnzHzKw?si=aZbXqlTVqk8A8eck" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/FJn6WEirV3U?si=kHq5QyJyok04pPEF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/oAfJ_WKdwok?si=bK58Ogmexf-fpat-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/t0EIoCnY0q0?si=GCYK8OmNPd11oCyD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/cNmpMNXigrk?si=Phvc6KgJ2VTrP1x8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/i8hQGboJrE8?si=y1RtidSjMteXYfqF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="video-container" onclick="playVideo1()">
+                    <!-- Fondo de color con opacidad -->
+                    <div class="play-button">▶</div>
+                    <p>Raca Ventura - E Commerce</p>
+                </div>
+
+                <!-- Video de YouTube oculto inicialmente -->
+                <iframe id="youtube-video-1" width="560" height="315"
+                    src="https://www.youtube.com/embed/W9xMwnzHzKw?si=aZbXqlTVqk8A8eck?autoplay=1" frameborder="0"
+                    style="display:none;" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+                <div class="video-container" onclick="playVideo1()">
+                    <!-- Fondo de color con opacidad -->
+                    <div class="play-button">▶</div>
+                    <p>Inmobiliaria - Landing Page</p>
+                </div>
+
+                <iframe id="youtube-video-1" width="560" height="315"
+                    src="https://www.youtube.com/embed/FJn6WEirV3U?si=kHq5QyJyok04pPEF?autoplay=1" frameborder="0"
+                    style="display:none;" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+                <div class="video-container" onclick="playVideo1()">
+                    <!-- Fondo de color con opacidad -->
+                    <div class="play-button">▶</div>
+                    <p>ICV - Blog Contenido</p>
+                </div>
+
+                <iframe id="youtube-video-1" width="560" height="315"
+                    src="https://www.youtube.com/embed/oAfJ_WKdwok?si=bK58Ogmexf-fpat-?autoplay=1" frameborder="0"
+                    style="display:none;" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+                <div class="video-container" onclick="playVideo1()">
+                    <!-- Fondo de color con opacidad -->
+                    <div class="play-button">▶</div>
+                    <p>Dulce Kreacion - Web Menú e E Commerce</p>
+                </div>
+
+                <iframe id="youtube-video-1" width="560" height="315"
+                    src="https://www.youtube.com/embed/t0EIoCnY0q0?si=GCYK8OmNPd11oCyD?autoplay=1" frameborder="0"
+                    style="display:none;" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+                <div class="video-container" onclick="playVideo1()">
+                    <!-- Fondo de color con opacidad -->
+                    <div class="play-button">▶</div>
+                    <p>Decofertas - E Commerce</p>
+                </div>
+
+                <iframe id="youtube-video-1" width="560" height="315"
+                    src="https://www.youtube.com/embed/cNmpMNXigrk?si=Phvc6KgJ2VTrP1x8?autoplay=1" frameborder="0"
+                    style="display:none;" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+                <div class="video-container" onclick="playVideo1()">
+                    <!-- Fondo de color con opacidad -->
+                    <div class="play-button">▶</div>
+                    <p>Cognitive English - Web Corporativa</p>
+                </div>
+
+                <iframe id="youtube-video-1" width="560" height="315"
+                    src="https://www.youtube.com/embed/i8hQGboJrE8?si=y1RtidSjMteXYfqF?autoplay=1" frameborder="0"
+                    style="display:none;" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="react-bootstrap"><!--3-->
 
@@ -238,6 +288,8 @@
             <p>Todos los derechos reservados. Laura Arellano</p>
         </footer>
     </div>
+
+    <script src="js/app.js"></script>
 </body>
 
 </html>
