arreglo del menú

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <div class="logo">
                 <img loading="lazy" src="img/logo-minimizado.png" alt="Logo">
             </div>
+            <div class="toggle">
+                <i class='bx bx-menu'></i> <!-- El ícono debe estar dentro de la etiqueta toggle -->
+            </div>            
         </div>
 
         <div class="menu">
